--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -22,7 +22,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
-  {% if env.isProd %}{% include "partials/tracking.html" %}{% endif %}
+  {% include "partials/tracking.html" %}
   
 </head>
 
