Include tracking scripts in all layouts

--- a/src/_includes/layouts/base-home.html
+++ b/src/_includes/layouts/base-home.html
@@ -45,7 +45,7 @@
     /* Exception: smaller heading variant for select titles */
     main h2.heading-36{ font-size:36px !important; line-height:1.15; font-weight:600 !important; }
   </style>
-  {% if env.isProd %}{% include "partials/tracking.html" %}{% endif %}
+  {% include "partials/tracking.html" %}
 </head> 
 
 
