--- a/src/_includes/layouts/marketing/base.html
+++ b/src/_includes/layouts/marketing/base.html
@@ -20,7 +20,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/kit.css">
-  {% if env.isProd %}{% include "partials/tracking.html" %}{% endif %}
+  {% include "partials/tracking.html" %}
 </head> 
 
 
