--- a/src/_includes/layouts/base-black.html
+++ b/src/_includes/layouts/base-black.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
-  {% if env.isProd %}{% include "partials/tracking.html" %}{% endif %}
+  {% include "partials/tracking.html" %}
 </head>
 
 
