--- a/src/_includes/layouts/base.html
+++ b/src/_includes/layouts/base.html
@@ -22,7 +22,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
-  {% include "partials/tracking.html" %}
+  {% block tracking_scripts %}
+    {% include "partials/tracking.html" %}
+  {% endblock %}
   
 </head>
 
